@@ -21,6 +21,7 @@ import cv.igrp.platform.access_management.app.application.queries.queries.*;
 
 import java.util.List;
 
+@SuppressWarnings("unchecked")
 @ExtendWith(MockitoExtension.class)
 public class GetApplicationsQueryHandlerTest {
 
@@ -29,7 +30,7 @@ public class GetApplicationsQueryHandlerTest {
 
     private GetApplicationsQueryHandler getApplicationsQueryHandler;
 
-    private ApplicationMapper applicationMapper = new ApplicationMapper();
+    private final ApplicationMapper applicationMapper = new ApplicationMapper();
 
     @BeforeEach
     void setUp() {
@@ -74,9 +75,9 @@ public class GetApplicationsQueryHandlerTest {
         assertNotNull(result);
         assertEquals(2, result.size());
 
-        assertEquals("MyApp One", result.get(0).getName());
-        assertEquals("APP001", result.get(0).getCode());
-        assertEquals("my-app-one", result.get(0).getSlug());
+        assertEquals("MyApp One", result.getFirst().getName());
+        assertEquals("APP001", result.getFirst().getCode());
+        assertEquals("my-app-one", result.getFirst().getSlug());
     }
 
     @Test
